--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "dependencies": {
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.2"
+  },
+  "devDependencies": {
+    "@vue/cli-service": "^4.5.9"
+  }
 }
