--- a/package.json
+++ b/package.json
@@ -2,25 +2,20 @@
   "name": "shit",
   "version": "1.0.0",
   "description": "Electro Shit - сайт-справочник электрика",
+  "author": "mccrush.ru",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mccrush/shit.git"
+  "dependencies": {
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.2"
   },
-  "keywords": [
-    "сайт",
-    "электрик",
-    "справочник"
-  ],
-  "author": "mccrush.ru",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mccrush/shit/issues"
+  "devDependencies": {
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/compiler-sfc": "^3.0.4"
   },
-  "homepage": "https://github.com/mccrush/shit#readme",
   "prettier": {
     "singleQuote": true,
     "semi": false
@@ -30,11 +25,18 @@
     "last 2 versions",
     "not dead"
   ],
-  "dependencies": {
-    "vue": "^3.0.4",
-    "vue-router": "^4.0.2"
+  "bugs": {
+    "url": "https://github.com/mccrush/shit/issues"
   },
-  "devDependencies": {
-    "@vue/cli-service": "^4.5.9"
+  "homepage": "https://github.com/mccrush/shit#readme",
+  "keywords": [
+    "сайт",
+    "электрик",
+    "справочник"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mccrush/shit.git"
   }
 }
