--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta1",
     "vue": "^3.0.4",
     "vue-router": "^4.0.2"
   },
