--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta1",
-    "vue": "^3.0.4",
-    "vue-router": "^4.0.2"
+    "vue": "^3.0.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "^4.5.9",
     "@vue/compiler-sfc": "^3.0.4"
   },
