--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "prettier": {
     "singleQuote": true,
-    "semi": false
+    "semi": false,
+    "jsxBracketSameLine": true,
+    "arrowParens": "avoid",
+    "trailingComma": "none"
   },
   "browserslist": [
     "> 1%",
